--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,9 +8,13 @@
     tools:context=".featureHome.fragments.ChatFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_top_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/margin_medium">
+        android:padding="@dimen/margin_medium"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/btn_back"
@@ -28,15 +32,16 @@
             app:tint="@color/dark_text_primary" />
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_profile_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/harmoine_profile_pic"
             app:civ_border_color="?android:colorPrimary"
             app:civ_border_width="2dp"
 
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_options"
             app:layout_constraintStart_toEndOf="@id/btn_back"
-            app:layout_constraintEnd_toStartOf="@id/btn_options" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/btn_options"
@@ -47,27 +52,86 @@
             android:minWidth="55dp"
             android:minHeight="55dp"
             android:padding="@dimen/margin_medium"
-            android:src="@drawable/ic_arrow_back_24"
+            android:src="@drawable/ic_more"
 
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/dark_text_primary" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        android:id="@+id/tv_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Harmoine Granger"
         android:textAlignment="center"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:textSize="20sp"/>
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_top_bar" />
+
     <View
+        android:id="@+id/view_separator"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-
         android:layout_marginHorizontal="@dimen/margin_start"
         android:layout_marginTop="@dimen/margin_large1"
-        android:background="@color/dark_background_variant"/>
+        android:background="@color/dark_background_variant"
+
+        app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_messages"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginBottom="@dimen/margin_small"
+        app:layout_constraintBottom_toTopOf="@id/layout_message_box"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_separator"
+        tools:listitem="@layout/sent_message_box" />
+
+    <LinearLayout
+        android:id="@+id/layout_message_box"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/margin_small"
+        android:gravity="center"
+        android:orientation="horizontal"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <EditText
+            android:id="@+id/edt_message_box"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="100"
+            android:background="@drawable/search_background"
+            android:hint="Message..."
+            android:padding="@dimen/margin_medium"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/btn_send"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_weight="20"
+            android:background="@drawable/search_background"
+            android:minWidth="55dp"
+            android:minHeight="55dp"
+            android:padding="@dimen/margin_medium"
+            android:src="@drawable/send_messaga_icon"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/dark_text_primary" />
+    </LinearLayout>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
