--- a/app/src/main/res/layout/fragment_contacts_list.xml
+++ b/app/src/main/res/layout/fragment_contacts_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_contacts_list"
     android:layout_width="match_parent"
@@ -7,31 +8,64 @@
     android:orientation="vertical"
     tools:context=".featureHome.fragments.ContactsListFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/edt_search_bar"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_start"
-            android:layout_marginTop="@dimen/margin_large2"
+            android:layout_margin="@dimen/margin_small"
             android:background="@drawable/search_background"
-            android:hint="@string/search_hint"
+            android:minWidth="55dp"
+            android:minHeight="55dp"
+            android:padding="@dimen/margin_medium"
+            android:src="@drawable/ic_arrow_back_24"
+            app:layout_constraintStart_toStartOf="parent"
 
-            android:padding="@dimen/padding_medium"
-            android:paddingStart="@dimen/padding_large"
-            android:textCursorDrawable="@drawable/cursor_color_drawable"
-            android:textSize="24sp"/>
-    </LinearLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/dark_text_primary" />
+
+        <TextView
+            android:id="@+id/tv_app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:paddingTop="@dimen/padding_medium"
+            android:paddingBottom="@dimen/padding_small"
+            android:text="@string/app_name"
+            android:textColor="@color/dark_primary"
+
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <EditText
+        android:id="@+id/edt_search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_start"
+        android:layout_marginTop="@dimen/margin_small"
+        android:background="@drawable/search_background"
+        android:hint="@string/search_hint"
+
+        android:padding="@dimen/padding_medium"
+        android:paddingStart="@dimen/padding_large"
+        android:textCursorDrawable="@drawable/cursor_color_drawable"
+        android:textSize="24sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_contacts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/contact_card_layout"
+        android:layout_marginTop="@dimen/margin_large1"
 
-        android:layout_marginTop="@dimen/margin_large1"/>
+        tools:listitem="@layout/contact_card_layout" />
 
 </LinearLayout>
