--- a/app/src/main/res/layout/received_message_box.xml
+++ b/app/src/main/res/layout/received_message_box.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="start">
 
 
@@ -14,6 +14,6 @@
         android:text="Received message"
         android:textSize="20sp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"/>
+        android:layout_marginEnd="@dimen/margin_large4"/>
 
 </LinearLayout>
