--- a/app/src/main/res/layout/sent_message_box.xml
+++ b/app/src/main/res/layout/sent_message_box.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="end">
 
     <TextView
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/sent_message_background"
         android:padding="@dimen/padding_large"
-        android:text="sent message"
+        android:text="sent sessage"
         android:textSize="20sp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"/>
+        android:layout_marginStart="@dimen/margin_large4"/>
 
 
 </LinearLayout>
