--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="circular_progressbar_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:indeterminateTint">@color/dark_text_primary</item>
+
+    </style>
+
 </resources>
