--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -115,6 +115,17 @@
 
     </LinearLayout>
 
+
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_large4"
+        android:layout_marginHorizontal="@dimen/margin_large6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_otp_resend" >
+
     <Button
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
@@ -123,12 +134,17 @@
         android:textStyle="bold"
         android:textColor="@color/dark_text_primary"
         android:textSize="28sp"
+       />
 
-        android:layout_marginTop="@dimen/margin_large4"
-        android:layout_marginHorizontal="@dimen/margin_large6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_otp_resend" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            style="@style/circular_progressbar_button"
+            android:visibility="invisible"/>
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
