--- a/app/src/main/res/layout/fragment_recent_chats.xml
+++ b/app/src/main/res/layout/fragment_recent_chats.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingTop="@dimen/padding_medium"
-        android:paddingBottom="@dimen/padding_small"
+        android:paddingBottom="@dimen/margin_medium"
         android:text="@string/app_name"
         android:textColor="@color/dark_primary"
 
@@ -32,6 +32,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <View
+        android:id="@+id/view_top_separator"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/dark_background_variant"
+        android:layout_marginVertical="@dimen/margin_medium"
+
+        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <EditText
         android:id="@+id/edt_search_bar"
         android:layout_width="match_parent"
@@ -45,7 +55,8 @@
         android:paddingStart="@dimen/padding_large"
         android:textCursorDrawable="@drawable/cursor_color_drawable"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />
+        app:layout_constraintTop_toBottomOf="@+id/view_top_separator"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <View
         android:id="@+id/view_separator"
