--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".featureSignIn.fragments.SignInFragment">
 
     <ImageView
@@ -25,15 +25,15 @@
         android:id="@+id/tv_enter_number_instruction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_start"
+        android:layout_marginTop="@dimen/margin_large2"
         android:text="Enter your phone number"
+
         android:textSize="20sp"
         android:textStyle="bold"
-
-        android:layout_marginTop="@dimen/margin_large2"
-        android:layout_marginHorizontal="@dimen/margin_start"
-        app:layout_constraintTop_toBottomOf="@id/logo_app"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/logo_app" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -64,30 +64,45 @@
             android:id="@+id/edt_phone_number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
             android:layout_gravity="center"
-            android:textCursorDrawable="@drawable/cursor_color_drawable"
+            android:layout_weight="2"
             android:background="@null"
             android:hint="Enter mobile number"
             android:inputType="number"
+            android:textCursorDrawable="@drawable/cursor_color_drawable"
             android:textSize="20sp" />
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/btn_next"
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Next"
-        android:textStyle="bold"
-        android:textColor="@color/dark_text_primary"
-        android:textSize="28sp"
-
-        android:layout_marginTop="@dimen/margin_large2"
         android:layout_marginHorizontal="@dimen/margin_start"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/margin_large2"
+
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Next"
+            android:textColor="@color/dark_text_primary"
+            android:textSize="28sp"
+            android:textStyle="bold"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            style="@style/circular_progressbar_button"
+            android:visibility="invisible"/>
+    </FrameLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
