--- a/app/src/main/res/layout/recent_chat_card_layout.xml
+++ b/app/src/main/res/layout/recent_chat_card_layout.xml
@@ -35,7 +35,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/tv_sender_name"
+                android:id="@+id/tv_contact_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_small"
