--- a/app/src/main/res/layout/recent_chat_card_layout.xml
+++ b/app/src/main/res/layout/recent_chat_card_layout.xml
@@ -51,8 +51,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_small"
                 android:layout_marginTop="@dimen/padding_small"
-                android:text="Yer a wizard harry!!"
-
+                android:text="Yer a wizbndbdndndnnd dhard Harry!"
+                android:maxEms="12"
+                android:maxLines="1"
+                android:ellipsize="marquee"
                 android:textColor="@color/dark_text_secondary"
                 android:textSize="16sp" />
 
