--- a/app/src/main/res/layout/sent_message_box.xml
+++ b/app/src/main/res/layout/sent_message_box.xml
@@ -12,7 +12,8 @@
         android:padding="@dimen/padding_large"
         android:text="sent sessage"
         android:textSize="20sp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:focusable="true"
         android:layout_marginStart="@dimen/margin_large4"/>
 
 
