--- a/app/src/main/res/layout/sent_message_box.xml
+++ b/app/src/main/res/layout/sent_message_box.xml
@@ -2,19 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="end">
+    android:gravity="end"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/msg_sent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_large4"
+        android:layout_marginTop="@dimen/margin_medium"
         android:background="@drawable/sent_message_background"
+        android:focusable="true"
         android:padding="@dimen/padding_large"
         android:text="sent sessage"
-        android:textSize="20sp"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:focusable="true"
-        android:layout_marginStart="@dimen/margin_large4"/>
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/tv_time_stamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginEnd="@dimen/margin_medium"
+        android:text="9:43 am"
+        android:textColor="@color/dark_text_secondary" />
 
 
 </LinearLayout>
